added start button and styling elements

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <br>
     <br>
 
+    <div id="divButton">
+    <button onclick="toggleQuiz()" id="startButton">Start Quiz!</button> 
+    </div>
+
         <div class="container">
 
             <form action="/action_page.php">
