working on toggle show quiz

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Totally Trivial Trivia!</title>
 
+    
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/javascript/app.js"></script>
 
@@ -21,7 +22,7 @@
     <button onclick="toggleQuiz()" id="startButton">Start Quiz!</button> 
     </div>
 
-        <div class="container">
+        <div id="myQuiz">
 
             <form action="/action_page.php">
                 <p>What type of animal is Bambi?</p>
