created results part html and css style

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
                 </form>
 
         </div>
+
+        <div id="results">
+            <p>Correct Answers:<span></span></p>
+            <p>Wrong Answers:<span></span></p>
+        </div>
     
 </body>
 </html>
