--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
                 <br>
                 <br>  
                 
+
                 <input type="submit" class="endGame" value="Submit">
             </form>
+
+            <button onclick="getResults()">Get Results</button>
                 
         </div>
 
