--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
     <h1>Totally Trivial Trivia!!!</h1>
+    <embed src="assets/images/nier.mp3" autostart="true" loop="true" hidden="true">
     <br>
     <br>
 
