added some style elements

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <body>
 
-    <h1>Totally Trivial Trivia!!!</h1>
+    <h1>Trivia Trivialities...</h1>
     <embed src="assets/images/nier.mp3" autostart="true" loop="true" hidden="true">
     <br>
     <br>
 
     <div id="divButton">
-    <button onclick="toggleQuiz()" id="startButton">Start Quiz!</button> 
+    <button onclick="toggleQuiz()" id="startButton">start quiz...</button> 
     </div>
 
         <div id="myQuiz">
@@ -61,16 +61,21 @@
                 <input type="radio" name="king" id="King of Hearts" value="King of Hearts"> King of Hearts<br>
                 <br>
                 <br>  
+                <br>
     
-                <input type="submit" id="doneButton" value="Submit" onclick="endGame()">
+                <input type="submit" id="doneButton" value="submit...?" onclick="endGame()">
                 <!-- <button >Get Results</button>  
             </form>  -->
         </div>
+
+        <br>
+        <br>
 
         <div id="results">
             <p>You Got <span id="correct"></span> Correct Answers</p>
             <p>And <span id="incorrect"></span> Wrong Answers</p>
         </div>
+
     
 </body>
 </html>
